--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,12 @@
 
     <repositories>
         <repository>
+          <id>Pentaho</id>
+          <name>Pentaho</name>
+          <url>https://public.nexus.pentaho.org/content/groups/omni</url>
+        </repository>
+
+        <repository>
             <id>Cloudera</id>
             <name>Cloudera Maven Repo</name>
             <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
